Re-implemented the entire grid

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Etcha-A-Sketch</title>
+    <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <button>Click me!</button>
+    <h2>Etch-A-Sketch</h2>
+    <div class="buttons">
+        <button id="resize">Resize</button>
+        <button id="reset">Reset</button>
+    </div>
     <div id="container"></div>
 </body>
 </html>
